<resources>
    <string name="app_name">Telesam</string>
    <string name="grant_permissions">Grant required permissions</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sign_in_to_telegram">Sign in to Telegram</string>
    <string name="enter_telegram_code_here">Enter Telegram code</string>
    <string name="select_telegram_group_full">Select telegram dialog to send SMS to</string>
    <string name="select_telegram_group">Select telegram dialog</string>
    <string name="select_another_telegram_group">Select another telegram dialog</string>
    <string name="ok">OK</string>
    <string name="group_set_message">Your SMS messages will be forwarded to:</string>
    <string name="new_message_template">New message from %1$s\n%2$s</string>
    <string name="step_1">Step 1: Grant permissions</string>
    <string name="step_2">Step 2: Sign in to Telegram</string>
    <string name="step_3">Step 3: Select Telegram dialog</string>
    <string name="permissions_granted">Permissions granted</string>
    <string name="logout">Logout</string>
    <string name="signed_in_text">You\'re signed in as %1$s %2$s</string>
    <string name="allow_to_run_in_background">Allow the app to run in background</string>
</resources>
