<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/request_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant_permissions" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/telegram_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_telegram" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/telegram_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_telegram_code_here" />

        <Button
            android:id="@+id/code_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>
    </LinearLayout>

    <Button
        android:id="@+id/select_telegram_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_telegram_group" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_message" />

</LinearLayout>
